Fixed a bug where some pages were shifted a bit to the left
Caused by the scroll bar appearing and pushing the content over a bit.
Fixed with `overflow-y: scroll` on html.

--- a/content/media/css/bootstrap.css
+++ b/content/media/css/bootstrap.css
@@ -69,6 +69,7 @@ html {
   font-size: 100%;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
+  overflow-y: scroll;
 }
 
 a:focus {
